plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.4'
	id 'io.spring.dependency-management' version '1.1.7'
    id 'com.diffplug.spotless' version '6.20.0'
}
ext {
    springAiVersion = "1.0.1"
    springModulithVersion = "1.4.1"
    testcontainersVersion = "1.20.4"
    cloudflareAwsSdkVersion = '2.31.50'
}

group = 'com.datn'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

test {
  testLogging {
    events "passed", "skipped", "failed", "standardOut", "standardError"
    showStandardStreams = true
  }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-configuration-processor'
    implementation 'org.springframework.ai:spring-ai-starter-model-openai'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.ai:spring-ai-starter-model-vertex-ai-gemini'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.mapstruct:mapstruct:1.6.3'
    implementation 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
    implementation 'org.springframework.modulith:spring-modulith-starter-core'
    implementation 'org.springframework.modulith:spring-modulith-starter-jpa'
    implementation 'me.paulschwarz:spring-dotenv:4.0.0'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
    implementation "software.amazon.awssdk:s3:$cloudflareAwsSdkVersion"
    implementation "software.amazon.awssdk:apache-client:$cloudflareAwsSdkVersion"
    implementation 'org.apache.httpcomponents.client5:httpclient5:5.4.1'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.keycloak:keycloak-admin-client:26.0.0'
    implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.9.0'
    implementation 'org.apache.commons:commons-csv:1.10.0'

    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.springframework.security:spring-security-test'
    compileOnly 'org.projectlombok:lombok:1.18.38'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.modulith:spring-modulith-starter-test'
    testImplementation 'org.apache.httpcomponents.client5:httpclient5:5.4.1'
    testCompileOnly 'org.projectlombok:lombok:1.18.38'
    
    // Testcontainers dependencies
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:postgresql'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    runtimeOnly 'org.postgresql:postgresql'
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'org.springframework.modulith:spring-modulith-actuator'
    runtimeOnly 'org.springframework.modulith:spring-modulith-observability'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    annotationProcessor 'org.projectlombok:lombok:1.18.38'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.38'
    testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
}
dependencyManagement {
    imports {
        mavenBom "org.springframework.ai:spring-ai-bom:$springAiVersion"
        mavenBom "org.springframework.modulith:spring-modulith-bom:$springModulithVersion"
        mavenBom "org.testcontainers:testcontainers-bom:$testcontainersVersion"
    }
}

tasks.named('test') {
	useJUnitPlatform()
}

spotless {
    java {
//        googleJavaFormat() // Use Google Java Format
        eclipse().configFile('./eclipse-formatter.xml')
        // or palantirJavaFormat()
        removeUnusedImports() // Remove unused imports
        trimTrailingWhitespace() // Trim trailing whitespace
        endWithNewline() // Ensure files end with a newline
    }
}